--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Rangoo"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Activities.HomeListActivity"
+            android:exported="false" />
         <activity
             android:name=".Activities.ProfileActivity"
             android:exported="false" />
