--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Rangoo"
         tools:targetApi="31">
         <activity
+            android:name=".ConfirmListActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activities.DetailsActivity"
             android:exported="false" />
         <activity
@@ -45,4 +48,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
