--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Rangoo"
         tools:targetApi="31">
         <activity
-            android:name=".ConfirmListActivity"
+            android:name=".Activities.AboutActivity"
             android:exported="false" />
         <activity
             android:name=".Activities.DetailsActivity"
